[gd_scene load_steps=15 format=2]

[ext_resource path="res://Player/Sword.tres" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Looting/PickupArea.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player/ExperienceSystem.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Health.gd" type="Script" id=5]
[ext_resource path="res://BlinkingMaterial.tres" type="Material" id=6]
[ext_resource path="res://Player/MeleeWeapon.gd" type="Script" id=7]
[ext_resource path="res://Curves/CurveLine.tres" type="Curve" id=8]
[ext_resource path="res://Player/PlayerHoodRed.tres" type="Texture" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3.5, 6 )

[sub_resource type="Animation" id=2]
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/WeaponPivot:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "SwingAnimation"
length = 0.366667
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/WeaponPivot:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0333333, 0.133333, 0.366667 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -60.0, 60.0, 0.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("Pivot/WeaponPivot/MeleeWeapon")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.0333333, 0.0666667, 0.1, 0.133333 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "AddLine"
}, {
"args": [  ],
"method": "AddLine"
}, {
"args": [  ],
"method": "AddLine"
}, {
"args": [  ],
"method": "ClearLines"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Pivot/WeaponPivot/MeleeWeapon:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.0333333, 0.166667 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=4]
resource_name = "SwingAnimation2"
length = 0.366667
step = 0.0333333
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/WeaponPivot:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0333333, 0.133333, 0.366667 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 60.0, -60.0, 0.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("Pivot/WeaponPivot/MeleeWeapon")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.0333333, 0.0666667, 0.1, 0.133333 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "AddLine"
}, {
"args": [  ],
"method": "AddLine"
}, {
"args": [  ],
"method": "AddLine"
}, {
"args": [  ],
"method": "ClearLines"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Pivot/WeaponPivot/MeleeWeapon:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.0333333, 0.166667 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 9.33333, 20.6667 )

[node name="Player" type="KinematicBody2D"]
z_as_relative = false
collision_layer = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Body" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 3 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
material = ExtResource( 6 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 9 )

[node name="PickupArea" parent="." instance=ExtResource( 3 )]
speed = 10.0

[node name="ExperienceSystem" type="Node" parent="."]
script = ExtResource( 4 )

[node name="Health" type="Node" parent="."]
script = ExtResource( 5 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Pivot" type="Node2D" parent="."]
z_as_relative = false

[node name="WeaponPivot" type="Node2D" parent="Pivot"]

[node name="MeleeWeapon" type="Area2D" parent="Pivot/WeaponPivot"]
position = Vector2( 15, 2 )
rotation = 0.785398
scale = Vector2( 0.75, 0.75 )
monitorable = false
collision_layer = 16
collision_mask = 8
script = ExtResource( 7 )

[node name="SwingAnimation" type="AnimationPlayer" parent="Pivot/WeaponPivot/MeleeWeapon"]
root_node = NodePath("../../../..")
anims/RESET = SubResource( 2 )
anims/SwingAnimation = SubResource( 3 )
anims/SwingAnimation2 = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="Pivot/WeaponPivot/MeleeWeapon"]
scale = Vector2( 1.855, 1.855 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/WeaponPivot/MeleeWeapon"]
position = Vector2( -1.41421, -0.471404 )
rotation = 0.785398
shape = SubResource( 5 )

[node name="Timer" type="Timer" parent="Pivot/WeaponPivot/MeleeWeapon"]
autostart = true

[node name="CPUParticles2D" type="CPUParticles2D" parent="Pivot/WeaponPivot/MeleeWeapon"]
position = Vector2( 1.88562, -15.0849 )
rotation = -0.785398
emitting = false
preprocess = 0.75
fract_delta = false
local_coords = false
emission_shape = 1
emission_sphere_radius = 1.0
direction = Vector2( 0, 0 )
spread = 0.0
gravity = Vector2( 0, -10 )
tangential_accel = 50.0
angle = 90.0
scale_amount = 5.0

[node name="Node" type="Node" parent="Pivot/WeaponPivot/MeleeWeapon"]

[node name="Line2D" type="Line2D" parent="Pivot/WeaponPivot/MeleeWeapon/Node"]
width = 2.0
width_curve = ExtResource( 8 )
default_color = Color( 1, 1, 1, 0.654902 )
begin_cap_mode = 1
end_cap_mode = 1

[node name="Tween" type="Tween" parent="."]
[connection signal="damageTaken" from="Health" to="." method="_on_Health_damageTaken"]
[connection signal="body_entered" from="Pivot/WeaponPivot/MeleeWeapon" to="Pivot/WeaponPivot/MeleeWeapon" method="_on_MeleeWeapon_body_entered"]
[connection signal="timeout" from="Pivot/WeaponPivot/MeleeWeapon/Timer" to="Pivot/WeaponPivot/MeleeWeapon" method="_on_Timer_timeout"]

[editable path="PickupArea"]
